# AI-Leads-Generation

./: .gitignore  PRD.md  README.md  pyproject.toml  requirements.txt
backend/: crew_runner.py  main.py  models.py  requirements.txt
backend/job_results/: 300f7eb1-1d6a-4b05-b13c-b3b3026b5d34.json  a19dabbf-7e55-4226-9438-106059888968.json  ebc24fe3-ef5f-4faa-8dd3-7facf5a308c3.json  f6ca5a1e-8b87-4905-981d-25a61ef1304c.json
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agent/[jobId]/: page.tsx
frontend/src/app/dashboard/: DashboardContent.tsx  page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: AgentProgress.tsx  DraftModal.tsx  Navbar.tsx  PriorityBadge.tsx
src/node_4_output_generation_gmail_outreach/: crew.py  main.py
src/node_4_output_generation_gmail_outreach/config/: agents.yaml  tasks.yaml
src/node_4_output_generation_gmail_outreach/tools/: advanced_web_boolean_builder.py  linkedin_boolean_generator.py  multi_source_phone_validator.py  phone_enrichment_tool.py  smart_search_query_optimizer.py
